--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ div {
 	user-select: none;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 14px;
+	touch-action: none;
 }
 .tools__drag-bar {
 	width: 100%;
