--- a/style.css
+++ b/style.css
@@ -7,10 +7,12 @@ body {
 	box-sizing: content-box;
 	margin: 0;
 	overflow-x: hidden;
+	position: relative;
 	/* width: 100vw;
 	min-height: 100vh; */
 	width: 100%;
 	height: 100%;
+	font-family: Arial, Helvetica, sans-serif;
 }
 div {
 	box-sizing: content-box;
@@ -24,6 +26,77 @@ div {
 	align-items: stretch;
 	width: 100%;
 	height: 100%;
+	transition: opacity 0.3s;
+}
+.greetings {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 100;
+	background-color: #eeeeee;
+	transition: opacity 0.3s;
+}
+.greetings__body {
+	display: flex;
+	flex-direction: column;
+	padding: 30px;
+	border-radius: 10px;
+	border: 1px solid #41424a;
+	margin: 0px 8px;
+}
+.greetings__title {
+	text-transform: uppercase;
+	font-size: 20px;
+	font-weight: bold;
+	color: #333c44;
+	max-width: 500px;
+}
+.greetings__title span {
+	font-weight: 900;
+}
+.greetings__subtitle {
+	color: #515e6b;
+	font-weight: bold;
+	font-size: 18px;
+	margin-top: 5px;
+}
+.greetings__button {
+	display: block;
+	margin-top: 20px;
+	padding: 10px 20px;
+	border-radius: 5px;
+	background-color: #54a376;
+	color: #fff;
+	font-weight: 700;
+	text-decoration: none;
+	text-align: center;
+	max-width: 100px;
+	user-select: none;
+	cursor: pointer;
+}
+.restart-button {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	display: block;
+	padding: 10px 20px;
+	border-radius: 5px;
+	background-color: #54a376;
+	color: #fff;
+	font-weight: 700;
+	text-decoration: none;
+	text-align: center;
+	max-width: 200px;
+	user-select: none;
+	cursor: pointer;
+	z-index: 300;
+	transition: opacity 0.3s;
 }
 .tools {
 	position: absolute;
@@ -31,7 +104,6 @@ div {
 	top: 0;
 	left: 0;
 	user-select: none;
-	font-family: Arial, Helvetica, sans-serif;
 	font-size: 14px;
 	touch-action: none;
 }
@@ -152,7 +224,7 @@ div {
 	left: 0;
 	width: 30px;
 	height: 30px;
-	transition: 0.2s;
+	transition: opacity 0.3s, top 0.2s, left 0.2s;
 	transform: translate(-50%, -50%);
 	user-select: none;
 	text-align: center;
@@ -177,6 +249,7 @@ div {
 
 .hidden {
 	opacity: 0;
+	z-index: -100;
 }
 .disabled {
 	display: none;
