--- a/style.css
+++ b/style.css
@@ -32,8 +32,10 @@ div {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100vw;
-	height: 100vh;
+	/* width: 100vw;
+	height: 100vh; */
+	width: 100%;
+	height: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -196,12 +198,18 @@ div {
 	/* border: 1px solid #41424a; */
 	outline: 1px solid #41424a;
 	position: relative;
-	min-width: 30vw;
+	/* min-width: 30vw;
 	min-height: 30vh;
 	width: 50vw;
 	height: 50vh;
 	max-width: 100vw;
-	max-height: 100vh;
+	max-height: 100vh; */
+	min-width: 30%;
+	min-height: 30%;
+	width: 50%;
+	height: 50%;
+	max-width: 100%;
+	max-height: 100%;
 	background-color: #f3f3f3;
 	overflow: hidden;
 }
